better way to check if su exists